--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Ledger | Ultimate</title>
+    <title>The Ledger | Official</title>
     <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/2098/2098402.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -29,14 +29,21 @@
         .edit-btn { color: #3b82f6; font-size: 11px; font-weight: bold; text-transform: uppercase; border: 1px solid #3b82f6; padding: 2px 4px; border-radius: 4px; }
         .edit-input { background: white; border: 1px solid #3b82f6; padding: 2px 4px; border-radius: 4px; width: 100%; }
         #calendarContainer { touch-action: pan-y; }
+        .undo-redo-container { position: absolute; top: 16px; right: 16px; display: flex; gap: 12px; }
+        .history-btn { font-size: 20px; cursor: pointer; opacity: 0.6; }
     </style>
 </head>
 <body class="p-4 pb-24">
-    <div class="max-w-md mx-auto">
+    <div class="max-w-md mx-auto relative">
         <header class="flex items-center mb-4">
             <img src="https://cdn-icons-png.flaticon.com/512/2098/2098402.png" class="w-8 h-8 mr-2">
             <h1 class="text-xl font-bold italic tracking-tighter uppercase text-slate-800">The Ledger</h1>
         </header>
+
+        <div class="undo-redo-container">
+            <button onclick="undo()" class="history-btn">↺</button>
+            <button onclick="redo()" class="history-btn">↻</button>
+        </div>
 
         <div id="pinContainer" class="hidden mb-6 bg-blue-600 text-white p-4 rounded-xl shadow-lg text-center">
             <p id="pinLabel" class="text-[10px] uppercase font-black opacity-80 mb-1"></p>
@@ -88,8 +95,15 @@
                     <h3 id="statDiaries" class="text-2xl font-bold">0</h3>
                 </div>
             </div>
-            <div id="intelDetailList" class="space-y-2 max-h-[250px] overflow-y-auto"></div>
-            <button onclick="downloadReadableData()" class="w-full bg-slate-900 text-white py-3 rounded-xl text-[10px] font-bold uppercase tracking-widest">📥 Download List Document</button>
+            <div id="intelDetailList" class="space-y-2 max-h-[180px] overflow-y-auto"></div>
+            
+            <div class="pt-4 border-t border-slate-100 text-center">
+                <p class="text-[10px] font-bold text-slate-400 uppercase tracking-widest">Founder & Architect</p>
+                <p class="text-sm font-black text-blue-600 uppercase">Omkar Gorakhnath Sathe</p>
+                <p class="text-[8px] text-slate-300 italic">Built for CA Aspirants & Commerce Professionals</p>
+            </div>
+
+            <button onclick="downloadReadableData()" class="w-full bg-slate-900 text-white py-3 rounded-xl text-[10px] font-bold uppercase tracking-widest mt-2">📥 Download List Document</button>
         </div>
 
         <nav class="fixed bottom-0 left-0 right-0 bg-white border-t border-slate-100 flex justify-around p-1 shadow-lg z-50">
@@ -108,13 +122,35 @@
         let selDate = new Date().toISOString().split('T')[0];
         let activeTab = 'tasks';
 
+        // UNDO/REDO LOGIC (Limit to 2 Steps)
+        let history = [JSON.stringify(db)];
+        let historyIndex = 0;
+
+        function recordAction() {
+            const snap = JSON.stringify(db);
+            if (snap === history[historyIndex]) return;
+            history = history.slice(0, historyIndex + 1);
+            history.push(snap);
+            if (history.length > 3) history.shift();
+            historyIndex = history.length - 1;
+        }
+
+        function undo() { if (historyIndex > 0) { historyIndex--; db = JSON.parse(history[historyIndex]); save(false); } }
+        function redo() { if (historyIndex < history.length - 1) { historyIndex++; db = JSON.parse(history[historyIndex]); save(false); } }
+
         // SWIPE LOGIC
         let tsX = 0; let teX = 0;
         const calArea = document.getElementById('calendarContainer');
         calArea.addEventListener('touchstart', e => { tsX = e.changedTouches[0].screenX; }, false);
         calArea.addEventListener('touchend', e => { teX = e.changedTouches[0].screenX; if(teX < tsX - 50) changeMonth(1); if(teX > tsX + 50) changeMonth(-1); }, false);
 
-        function save() { localStorage.setItem(KEY, JSON.stringify(db)); renderCalendar(); updateDashboard(); if(activeTab === 'intel') renderIntel(); }
+        function save(record = true) { 
+            if(record) recordAction(); 
+            localStorage.setItem(KEY, JSON.stringify(db)); 
+            renderCalendar(); 
+            updateDashboard(); 
+            if(activeTab === 'intel') renderIntel(); 
+        }
 
         function showScreen(s) {
             activeTab = s;
@@ -128,7 +164,7 @@
                 if(s === 'tasks') inputArea.innerHTML = `<input type="text" placeholder="+ New task" onkeypress="handleEntry(event, 'task')">`;
                 else if(s === 'exams') inputArea.innerHTML = `<input type="text" placeholder="+ New exam" onkeypress="handleEntry(event, 'exam')">`;
                 else if(s === 'events') inputArea.innerHTML = `<input type="text" placeholder="+ New event" onkeypress="handleEntry(event, 'event')">`;
-                else if(s === 'diary') inputArea.innerHTML = `<textarea id="diaryBox" placeholder="Write note">${db.diaries[selDate] || ''}</textarea><button onclick="saveDiary()" class="bg-blue-600 text-white w-full mt-2 py-2 rounded-lg font-bold text-xs uppercase">Save Note</button>`;
+                else if(s === 'diary') inputArea.innerHTML = `<textarea id="diaryBox" placeholder="Write note">${db.diaries[selDate] || ''}</textarea><button onclick="saveDiary()" class="bg-blue-600 text-white w-full mt-2 py-2 rounded-lg font-bold text-xs uppercase tracking-widest">Save Note</button>`;
                 updateDashboard();
             }
         }
@@ -163,35 +199,29 @@
             container.innerHTML = '';
             db.exams.filter(ex => ex.date === selDate).forEach(ex => {
                 container.innerHTML += `<div class="dashboard-section border-l-red-500 bg-red-50 flex justify-between items-center"><p class="text-xs font-bold uppercase">${ex.name}</p>
-                <div class="flex items-center gap-3"><button onclick="pinItem('EXAM','${ex.name}','${ex.date}')" class="text-[9px] font-bold text-blue-500">PIN</button><button onclick="inlineEditCD('${ex.name}','${ex.date}', this)" class="edit-btn">EDIT</button><button onclick="delExam('${ex.name}','${ex.date}')" class="del-btn">×</button></div></div>`;
+                <div class="flex items-center gap-4"><button onclick="pinItem('EXAM','${ex.name}','${ex.date}')" class="text-[9px] font-bold text-blue-500">PIN</button><button onclick="inlineEditCD('${ex.name}','${ex.date}', this)" class="edit-btn">EDIT</button><button onclick="delExam('${ex.name}','${ex.date}')" class="del-btn">×</button></div></div>`;
             });
             (db.tasks[selDate] || []).forEach((t, i) => {
                 container.innerHTML += `<div class="dashboard-section flex items-center gap-3"><div class="cube-checkbox ${t.done?'checked':''}" onclick="toggleTask(${i})"></div>
                 <p class="flex-grow text-sm ${t.done?'line-through opacity-40':''}">${t.text}</p>
-                <div class="flex items-center gap-3"><button onclick="pinItem('TASK','${t.text}','${selDate}')" class="text-[9px] font-bold text-blue-500">PIN</button><button onclick="inlineEditTask(${i}, this)" class="edit-btn">EDIT</button><button onclick="delTask(${i})" class="del-btn">×</button></div></div>`;
+                <div class="flex items-center gap-4"><button onclick="pinItem('TASK','${t.text}','${selDate}')" class="text-[9px] font-bold text-blue-500">PIN</button><button onclick="inlineEditTask(${i}, this)" class="edit-btn">EDIT</button><button onclick="delTask(${i})" class="del-btn">×</button></div></div>`;
             });
             (db.events[selDate] || []).forEach((e, i) => {
                 container.innerHTML += `<div class="dashboard-section border-l-green-500 bg-green-50 flex justify-between items-center"><span class="text-sm">${e}</span>
-                <div class="flex items-center gap-3"><button onclick="pinItem('EVENT','${e}','${selDate}')" class="text-[9px] font-bold text-blue-500">PIN</button><button onclick="inlineEditEvent(${i}, this)" class="edit-btn">EDIT</button><button onclick="delEvent(${i})" class="del-btn">×</button></div></div>`;
+                <div class="flex items-center gap-4"><button onclick="pinItem('EVENT','${e}','${selDate}')" class="text-[9px] font-bold text-blue-500">PIN</button><button onclick="inlineEditEvent(${i}, this)" class="edit-btn">EDIT</button><button onclick="delEvent(${i})" class="del-btn">×</button></div></div>`;
             });
             if(db.diaries[selDate]) container.innerHTML += `<div class="dashboard-section border-l-yellow-500 bg-yellow-50 flex justify-between items-center"><p class="text-xs italic">"${db.diaries[selDate]}"</p><button onclick="delDiary()" class="del-btn">×</button></div>`;
             renderPin();
         }
 
         // CURSOR RECTIFICATION (FOCUS AT END)
-        function focusAtEnd(el) {
-            el.focus();
-            const val = el.value;
-            el.value = '';
-            el.value = val;
-        }
+        function focusAtEnd(el) { el.focus(); const val = el.value; el.value = ''; el.value = val; }
 
         function inlineEditTask(i, btn) {
             const p = btn.parentElement.parentElement.querySelector('p');
             const old = db.tasks[selDate][i].text;
             p.innerHTML = `<input type="text" class="edit-input" value="${old}" id="eTask">`;
-            const input = document.getElementById('eTask');
-            focusAtEnd(input);
+            const input = document.getElementById('eTask'); focusAtEnd(input);
             input.onblur = () => { if(input.value) db.tasks[selDate][i].text = input.value; save(); };
             input.onkeypress = (e) => { if(e.key==='Enter') input.blur(); };
         }
@@ -199,16 +229,14 @@
             const p = btn.parentElement.parentElement.querySelector('span');
             const old = db.events[selDate][i];
             p.innerHTML = `<input type="text" class="edit-input" value="${old}" id="eEvent">`;
-            const input = document.getElementById('eEvent');
-            focusAtEnd(input);
+            const input = document.getElementById('eEvent'); focusAtEnd(input);
             input.onblur = () => { if(input.value) db.events[selDate][i] = input.value; save(); };
             input.onkeypress = (e) => { if(e.key==='Enter') input.blur(); };
         }
         function inlineEditCD(name, date, btn) {
             const p = btn.parentElement.parentElement.querySelector('p');
             p.innerHTML = `<input type="text" class="edit-input" value="${name}" id="eExam">`;
-            const input = document.getElementById('eExam');
-            focusAtEnd(input);
+            const input = document.getElementById('eExam'); focusAtEnd(input);
             input.onblur = () => { if(input.value) db.exams.find(ex=>ex.name===name&&ex.date===date).name = input.value; save(); };
             input.onkeypress = (e) => { if(e.key==='Enter') input.blur(); };
         }
@@ -239,10 +267,19 @@
             else if(type==='diary') Object.keys(db.diaries).forEach(d=>list.innerHTML += `<div class="bg-yellow-50 p-2 text-xs border border-yellow-100 rounded mb-1"><b>${d}:</b> ${db.diaries[d]}</div>`);
         }
 
-        function pinItem(t,c,d) { const m=["JAN","FEB","MAR","APR","MAY","JUN","JUL","AUG","SEP","OCT","NOV","DEC"]; const dt=new Date(d); db.pin={type:`${m[dt.getMonth()]} ${dt.getDate()} - ${t}`, content:c}; save(); }
+        // PIN LOGIC (UPGRADED WITH TASK COUNTDOWN)
+        function pinItem(t,c,d) { 
+            const m=["JAN","FEB","MAR","APR","MAY","JUN","JUL","AUG","SEP","OCT","NOV","DEC"];
+            const dt=new Date(d);
+            const diff = Math.ceil((dt - new Date()) / 86400000);
+            const countdownText = diff >= 0 ? `: ${diff} DAYS LEFT` : '';
+            db.pin={type:`${m[dt.getMonth()]} ${dt.getDate()} - ${t}${countdownText}`, content:c}; save(); 
+        }
+
         function clearPin() { db.pin=null; save(); }
         function renderPin() { const c=document.getElementById('pinContainer'); if(db.pin){ c.classList.remove('hidden'); document.getElementById('pinLabel').innerText=db.pin.type; document.getElementById('pinContent').innerText=db.pin.content; } else c.classList.add('hidden'); }
         function changeMonth(o){ curDate.setMonth(curDate.getMonth()+o); renderCalendar(); }
+        
         function downloadReadableData() {
             let doc = "THE LEDGER: ACADEMIC MISSION LIST\n\nEXAMS:\n" + db.exams.map(ex => `[${ex.date}] ${ex.name}`).join("\n") + "\n\nTASKS:\n" + Object.keys(db.tasks).map(d => db.tasks[d].filter(t=>!t.done).map(t => `[${d}] ${t.text}`).join("\n")).join("\n");
             const b=new Blob([doc], {type:'text/plain'}); const a=document.createElement('a'); a.href=URL.createObjectURL(b); a.download=`TheLedger_List.txt`; a.click();
